--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <div class="container">
             <h1>CV</h1>
             <H2>Sergey Borisevich</H2>
-            <div class="contact-info">
+            <div class="contact-info clearfix">
                 <h3>Contact info</h3>
                 <ul>
                     <li><b>Phone:</b> +375 (29) 130-24-52</li>
                     <li><b>E-mail:</b> borisevichsergeyv@gmail.com</li>
                     <li><b>Telegram:</b><a href="https://t.me/Serjyk">@Serjyk</a></li>
                 </ul>
-                <div class="avatar"><img src="./img/photo.jpg" width="140" height="140" alt="Аватар"></div>
+                <div class="avatar">
+                    <img src="./img/photo.jpg" width="140" height="140" alt="Аватар">
+                </div>
             </div>
             <div class="summary">
                 <h3>Summary</h3>
